--- a/style.css
+++ b/style.css
@@ -465,6 +465,7 @@ comments.php
     text-align: center;
     color: #655e5e;
     margin: 0 0 10px 0;
+    padding-top: 20px;
 }
 
 .comment-date {
@@ -530,6 +531,7 @@ comments.php
 /* reply respond*/
 .section-inner.thin.max-percentage{
     background: white;
+    padding-bottom: 10px;
 }
 
 
