--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body {
     background: #f4f4f4;
 }
 
+ul, li {
+    list-style: none;
+}
+
+
 .blog {
     margin: 0;
 }
@@ -115,7 +120,6 @@ header-ad.php
 
 .header-ad-container-card-swiper {
     display: flex;
-    list-style: none;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -151,7 +155,6 @@ header area category
 .header-navigation-container-ul {
     display: flex;
     justify-content: flex-start;
-    list-style: none;
     padding-left: 10px;
 }
 
@@ -378,12 +381,7 @@ sidebar-catalogue.php
 }
 
 .single-area-post-catalogue-h2 {
-    list-style: none;
     margin-top: .5em;
-}
-
-.single-area-post-catalogue-h3 {
-    list-style: none;
 }
 
 
@@ -445,13 +443,13 @@ comments.php
     padding: 15px 30px;
 }
 
-.comment .comment-respond{
+.comment .comment-respond {
     background: #F3F4F7;
     padding: 10px;
     margin: 20px;
 }
 
-.comment .section-inner.thin.max-percentage{
+.comment .section-inner.thin.max-percentage {
     background: #F3F4F7;
 }
 
@@ -528,36 +526,38 @@ comments.php
     padding-bottom: 20px;
     margin: 0 0 16px 0;
 }
+
 /* reply respond*/
-.section-inner.thin.max-percentage{
+.section-inner.thin.max-percentage {
     background: white;
     padding-bottom: 10px;
 }
 
 
-.comment-form-comment,.comment-form-author,.comment-form-email,.comment-form-url,.comment-form-cookies-consent{
+.comment-form-comment, .comment-form-author, .comment-form-email, .comment-form-url, .comment-form-cookies-consent {
     padding: 5px 20px;
     margin: 5px 0;
 }
 
-.comment-respond .comment-form-author, .comment-respond .comment-form-email{
+.comment-respond .comment-form-author, .comment-respond .comment-form-email {
     float: left;
     width: calc(50% - 1rem);
 }
 
-.form-submit{
+.form-submit {
     padding: 0 0 5px 20px;
 }
 
 
-.section-inner.thin{
+.section-inner.thin {
     max-width: 58rem;
 }
 
-.comment-form-comment{
+.comment-form-comment {
     margin: 0;
 }
-.comment-form-comment textarea{
+
+.comment-form-comment textarea {
     -webkit-box-sizing: border-box;
     padding: 8px 12px 8px 5px;
     margin: 0;
@@ -568,14 +568,14 @@ comments.php
     height: 100%;
 }
 
-.comment-form-author,.comment-form-email,.comment-form-url{
+.comment-form-author, .comment-form-email, .comment-form-url {
     display: inline-block;
     width: 33%;
     max-width: 250px;
     position: relative;
 }
 
-.comment-form-author label, .comment-form-email label, .comment-form-url label{
+.comment-form-author label, .comment-form-email label, .comment-form-url label {
     position: absolute;
     font-size: 12px;
     font-weight: 400;
@@ -586,7 +586,7 @@ comments.php
     padding: 11px 0 12px;
 }
 
-.comment-form-author input, .comment-form-email input, .comment-form-url input{
+.comment-form-author input, .comment-form-email input, .comment-form-url input {
     padding: 5px 5px 5px 105px;
     -webkit-box-sizing: border-box;
     margin: 0;
@@ -596,7 +596,44 @@ comments.php
     width: 100%;
 }
 
-.comment-form-author input, .comment-form-email input, .comment-form-url input:focus{
+.comment-form-author input, .comment-form-email input, .comment-form-url input:focus {
     outline: none;
 }
 
+/*--------------------------------------------------------------
+sidebar-relation-post.php
+--------------------------------------------------------------*/
+.sidebar-relation-post-container-header{
+    margin: 0 0 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    position: relative;
+}
+.sidebar-relation-post-container ul{
+    padding: 0;
+}
+
+.sidebar-relation-post-container {
+    background: white;
+}
+
+.sidebar-relation-post-container-center{
+    padding: 10px;
+}
+
+.sidebar-relation-container-post, .sidebar-relation-container-post-left,.sidebar-relation-container-post-right{
+    display:  table-cell;
+    vertical-align: top;
+}
+
+
+.sidebar-relation-container-post-left {
+    display: inline-block;
+    float: left;
+}
+
+.sidebar-relation-container-post-right {
+    font-size: 14px;
+    height: 100%;
+}
