美化相关推荐

--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body {
     background: #f4f4f4;
 }
 
+a{
+    text-decoration: none;
+}
+
+
 ul, li {
     list-style: none;
 }
@@ -394,7 +399,6 @@ sidebar-catalogue.php
 }
 
 .sidebar-catalogue-content a {
-    text-decoration: none;
     font-size: .95rem;
     line-height: 0;
     color: #808080;
@@ -494,7 +498,6 @@ comments.php
     position: relative;
     display: inline-block;
     padding: 6px 15px;
-    text-decoration: none;
     text-align: center;
     cursor: pointer;
     user-select: none;
@@ -603,14 +606,15 @@ comments.php
 /*--------------------------------------------------------------
 sidebar-relation-post.php
 --------------------------------------------------------------*/
-.sidebar-relation-post-container-header{
+.sidebar-relation-post-container-header {
     margin: 0 0 20px;
     font-size: 20px;
     text-transform: uppercase;
     font-weight: 600;
     position: relative;
 }
-.sidebar-relation-post-container ul{
+
+.sidebar-relation-post-container ul {
     padding: 0;
 }
 
@@ -618,12 +622,17 @@ sidebar-relation-post.php
     background: white;
 }
 
-.sidebar-relation-post-container-center{
+.sidebar-relation-post-container-center {
     padding: 10px;
 }
 
-.sidebar-relation-container-post, .sidebar-relation-container-post-left,.sidebar-relation-container-post-right{
-    display:  table-cell;
+.sidebar-relation-container-post {
+    border-bottom: 1px solid #e5e5e5;
+    padding: 20px 0;
+}
+
+.sidebar-relation-container-post, .sidebar-relation-container-post-left, .sidebar-relation-container-post-right {
+    display: table-cell;
     vertical-align: top;
 }
 
@@ -633,7 +642,25 @@ sidebar-relation-post.php
     float: left;
 }
 
+.sidebar-relation-container-post-left img {
+    max-width: 128px;
+    max-height: 60px;
+}
+
 .sidebar-relation-container-post-right {
+    height: 60px;
+    line-height: 60px;
+    padding-left: 5px;
+}
+
+
+.sidebar-relation-container-post-right a {
+    line-height: 1.5;
+    display: inline-block;
+    vertical-align: middle;
     font-size: 14px;
-    height: 100%;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    color: black;
 }
